# eyeris

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  index.html
.github/workflows/: ci.yml  deploy.yml
docs/: api.md
src/: errors.rs  lib.rs  main.rs  processor.rs  prompts.rs  utils.rs  web.rs
src/providers/: mod.rs  ollama.rs  openai.rs
