[package]
name = "eyeris"
version = "0.1.1"
edition = "2021"
authors = ["Steve Caldwell"]
description = "A high-performance image analysis service with AI provider support"
license = "MIT"
repository = "https://github.com/scald/eyeris"
documentation = "https://docs.rs/eyeris"
readme = "README.md"
keywords = ["ai", "image-analysis", "vision", "openai", "ollama"]
categories = ["computer-vision", "api-bindings", "multimedia::images"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
image = "0.24"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.8"
futures = "0.3"
bytes = { version = "1.5", features = ["serde"] }
thiserror = "1.0"
parking_lot = "0.12"
async-trait = "0.1" 